update function define

--- a/_posts/2013-08-24-javascript-function.html
+++ b/_posts/2013-08-24-javascript-function.html
@@ -14,6 +14,7 @@ title : Javascript基础之——函数详解
 
 
 <p>函数对任何语言来讲都是一个核心的概念，通过函数可以封装任意多条语句，而且可以在<strong>任何地方、任何时候调用执行</strong>。</p>
+<p>FUNCTION DEFINE: A function is a block of code that takes input, processes that input, and then produces output.</p>
 <p>ECMAScript中规定：使用function关键字来声明，后面跟一组参数以及函数体。</p>
 <p>一般情况下Javascript创建一个函数一般有以下两种方式：</p>
 <h5>函数声明</h5>
