add first statement semicolon

--- a/_posts/2015-08-02-immediately-invoked-function-expression.html
+++ b/_posts/2015-08-02-immediately-invoked-function-expression.html
@@ -26,8 +26,7 @@ title : 立即执行的函数表达式
 <p>一般我们写，习惯在之前添加一个分号；已便于（保证）JS语法解释器合理的解析我们写的代码，而不会抛出异常。</p>
 
     {% highlight javascript %}
-;
-(function(){ // the function expression is surrounded by parenthesis
+;(function(){ // the function expression is surrounded by parenthesis
     // variables defined here
     // can't be accessed outside
 })(); // the function is immediately invoked
