update html parser

--- a/_posts/2015-08-05-webkit-html-tokenizer.html
+++ b/_posts/2015-08-05-webkit-html-tokenizer.html
@@ -11,7 +11,7 @@ title : WEBKIT内核之——HTML部分（一）
 
 <p>HTML词法解析器</p>
 
-<p></p>
+<p>HTML Tokenizer意为HTML词法解析器，它的任务，就是将输入的字节流解析成一个个的标记（HTMLToken），然后由语法解析器进行下一步的分析。</p>
 
 
 
