update html parse page

--- a/_posts/2015-08-06-webkit-html-parser.html
+++ b/_posts/2015-08-06-webkit-html-parser.html
@@ -11,7 +11,7 @@ title : WEBKIT内核之——HTML部分（二）
 
 <p>HTML语法解析器</p>
 
-<p>HTML Parser意为语法解析器，它通过HTMLTokenizer识别出的一个一个的标识（tag）来创建Element(Node)，把Element组织成一个DOM Tree， 同时，同步生成Render Tree。</p>
+<p>HTML Parser意为语法解析器，它通过HTMLTokenizer识别出的一个一个的标识（tag）来创建Element(Node)，把Element组织(解析)成一个DOM Tree， 同时，同步生成Render Tree。</p>
 
 
 
