--- a/_posts/2015-08-24-webkit-html-tokenizer.html
+++ b/_posts/2015-08-24-webkit-html-tokenizer.html
@@ -10,7 +10,7 @@ title : WEBKIT内核学习杂记
 
 <h4>DOM树和RENDER树</h4>
 
-<p>WEBKIT内核中每个HTML页面对应于一颗DOM树和RENDER树（DOM树和RENDER树是同时生成的），DOM树用于描述HTML页面的的结构化信息（结构层），而RENDER树则用于布局（表现层），具体负责DOM树如何显示在屏幕上，从MVC的角度来说，可以将RENDER树看成是V，DOM树看成是M，C则是具体的调度者，比HTMLDocumentParser等。WEBKIT将这两部分分开，可以看出其设计意图，同一个DOM，可以对应不同的RENDER，或者不同的XML文档，对应于相同的RENDER,显示出其极大的灵活性。</p>
+<p>WEBKIT内核中每个HTML页面对应于一颗DOM树和RENDER树（DOM树和RENDER树是同时生成的），DOM树用于描述HTML页面的的结构化信息（结构层），而RENDER树则用于布局（表现层），具体负责DOM树如何显示在屏幕上，从MVC的角度来说，可以将RENDER树看成是V，DOM树看成是M，C则是具体的调度者，比HTMLDocumentParser等。WEBKIT将这两部分开，可以看出其设计意图，同一个DOM，可以对应不同的RENDER，或者不同的XML文档，对应于相同的RENDER,显示出其极大的灵活性。</p>
 
 
 <p> WEBKIT的整个解析过程，大致是这样，从网络返回数据后，将数据交给HTMLDocumentParser，然后HTMLDocumentParser将文本字符的解析交给HTMLDocumentTokenizer来负责，HTMLDocumentTokenizer解析出一个一个的标签（HTML文档时是以标签为单位）,HTMLDocumentParser将标签交给，HTMLTreeBuilder来构建DOM树，这里的HTMLDocumentParser从MVC的角度来看，其作用和地位应该是C，这样，MVC各兼其责，最终生成一颗RENDER树，将其显示在屏幕上。</p>
