--- a/_posts/2015-08-24-webkit-html-tokenizer.html
+++ b/_posts/2015-08-24-webkit-html-tokenizer.html
@@ -900,4 +900,4 @@ void Element::attach()
 
 
 <p class="pege_tail">参考<a href="http://blog.csdn.net/hgl868/article/details/7617191" target="_blank">webkit Parser模块</a></p>
-<p class="pege_tail">参考<a href="http://blog.csdn.net/shunzi__1984/article/details/6196279" target="_blank">webkit中 html的解析及dom树和render树的生成</a></p>
+<p>参考<a href="http://blog.csdn.net/shunzi__1984/article/details/6196279" target="_blank">webkit中 html的解析及dom树和render树的生成</a></p>
