--- a/_posts/2015-10-12-ECMA-script6-demo.html
+++ b/_posts/2015-10-12-ECMA-script6-demo.html
@@ -59,7 +59,7 @@ aa = 200;
 console.log(aa);   //100
 
     {% endhighlight %}
-
+<p>const 代表一个值的 常量索引 （事实上绝大多数语言都提供这样的功能）。换句话说，变量名字在内存中的指针不能够改变，但是指向这个变量的值 可能 改变。</p>
 
 
 <h4>内置Array.prototype.find()和内置Array.prototype.filter();</h4>
