--- a/_posts/2015-10-12-ECMA-script6-demo.html
+++ b/_posts/2015-10-12-ECMA-script6-demo.html
@@ -10,7 +10,7 @@ title : ES6一些新语法
 
 <h4>let与const 关键字</h4>
 
-<p>可以把let看成var，只是它定义的变量被限定在了特定范围内才能使用，而离开这个范围则无效。const则很直观，用来定义常量，即无法被更改值的变量。</p>
+<p>可以把let看成var，只是它定义的变量被限定在了特定范围内才能使用，而离开这个范围则无效。const则很直观，用来定义常量，即无法被更改值的变量。另外，凡是在声明之前就使用这些命令，就会报错。不会有变量提升，重复定义会报错。</p>
 
 
 
@@ -50,7 +50,6 @@ console.log(a);   //5
 <p>一旦定义一个变量为const类型，后面就不能对他进行修改。</p>
 
 
-
     {% highlight javascript %}
 
 const aa = 100;
@@ -59,7 +58,13 @@ aa = 200;
 console.log(aa);   //100
 
     {% endhighlight %}
+
 <p>const 代表一个值的 常量索引 （事实上绝大多数语言都提供这样的功能）。换句话说，变量名字在内存中的指针不能够改变，但是指向这个变量的值 可能 改变。</p>
+
+
+
+
+
 
 
 <h4>内置Array.prototype.find()和内置Array.prototype.filter();</h4>
